# Moteur_Inference

./: .gitignore  CMakeLists.txt  readme.md  syntaxe.txt
bases/: facts.txt  facts_syntax_test.txt  rule_syntax_test.txt  rules.txt
doc/: rapport.tex
src/: fact_base.h  main.cpp  rule.h  rule_base.h
src/algos/: backwardChaining.h  backwardChainingOutput.cpp  backwardChainingOutput.h  forwardChaining.h  inferenceSolver.h
src/bases/: facts.txt  rules.txt
src/class/: fact.h  rule.h
src/class/fact/: boolean_fact.h  fact.h  numeric_fact.h  text_fact.h
src/criteres/: critere.h  maxpremisses.h  recentpremisses.h
src/exception/: syntax_exception.h
src/fact/: boolean_fact.cpp  boolean_fact.h  fact.cpp  fact.h  numeric_fact.cpp  numeric_fact.h  text_fact.cpp  text_fact.h
src/utils/: cout.cpp  cout.h  fact_factory.cpp  fact_factory.h
